added code comments in html pages

--- a/templates/WebApp/app_base.html
+++ b/templates/WebApp/app_base.html
@@ -28,6 +28,8 @@
     <div id="content-wrapper" class="d-flex flex-column">
         <!-- Main Content -->
         <div id="content" class="bg-gray-300">
+            <!-- Header logos -->
+            <!-- Change src of <img> tag in order to change the header logo images -->
             <div class="row bg-white">
                 <div class="col-lg-12 h-50">
 
@@ -77,6 +79,8 @@
                     </div>
                 </div>
             </div>
+            <!-- Navigation bar -->
+            <!-- To update any of the navigation bar items, please edit the content of <li> tags below -->
             <nav class="navbar navbar-expand-lg navbar-dark" id="navbar_app_base">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="{% url "home" %}" id="title_navbar">Geospatial App</a>
