--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -21,9 +21,9 @@
 {% block content %}
     <div class="container-fluid bg-gray-300">
         <div class="row d-flex justify-content-center">
-            <!-- Line Chart -->
+            <!-- Chart from ClimateSERV API  -->
+            <!-- After the geojson file is received by the 'selectFiles' <input> tag below, a call is made to ClimateSERV API, as in the static/chart_from_ClimateSERV.js file -->
             <div class="col-xl-12 col-lg-12 text-center mt-4">
-
                 <hr>
                 <div class="card shadow mb-4">
                     <!-- Card Header -->
