--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -21,6 +21,8 @@
 {% block content %}
     <div class="container-fluid bg-gray-300">
         <div class="row d-flex justify-content-center mt-5">
+            <!-- Chart from SQLite database  -->
+            <!-- Data is available in SQLite database, which can be updated from 127.0.0.1/admin page. An ajax call is made to retrieve the chart data from the data models, as in the static/chart_from_SQLite.js file -->
             <div class="col-xl-12 col-lg-12">
 
                 <div class="card shadow mb-4">
