--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -36,6 +36,8 @@
 
     <div class="container-fluid bg-gray-300">
         <div class="row d-flex justify-content-center">
+            <!-- Chart from netCDF file  -->
+            <!-- After the geojson file is received by the 'selectFiles' <input> tag below, an ajax call is made to retrieve the timeseries data, as in the static/chart_from_netCDF.js file -->
             <div class="col-xl-12 col-lg-12 text-center mt-4">
                 <hr>
                 <div class="card shadow mb-4">
