--- a/templates/WebApp/map_fullscreen_about.html
+++ b/templates/WebApp/map_fullscreen_about.html
@@ -1,4 +1,6 @@
 {% block content %}
+    <!-- Learn how to modify -->
+    <!-- Update the text inside the div with "modal-body" class below in order to update the help info -->
     <div class="modal fade" id="fullModal" tabindex="-1" aria-labelledby="fullModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
