--- a/templates/WebApp/setup.html
+++ b/templates/WebApp/setup.html
@@ -1,5 +1,7 @@
 {% extends "WebApp/app_base.html" %}
 {% load static %}
+<!-- Instructions about setting up -->
+<!-- This page has clear instructions to set up this Django app locally -->
 
 {% block title %}SERVIR AppTemplate - Home{% endblock %}
 {% block script %}
