--- a/templates/WebApp/update_datamodel.html
+++ b/templates/WebApp/update_datamodel.html
@@ -17,6 +17,8 @@
 <!-- Begin Page Content -->
 {% block content %}
     <div class="container-fluid bg-gray-300">
+        <!-- Add record to Datamodel -->
+        <!-- After the user is authenticated(Login), the page displays the fields from Django form. Once submit is clicked, the record is updated in the backend model -->
 
         <div class="card shadow mt-4 mb-4">
             <div class="card-header py-3">
