--- a/templates/WebApp/chart_from_ClimateSERV_about.html
+++ b/templates/WebApp/chart_from_ClimateSERV_about.html
@@ -1,5 +1,7 @@
 {% block content %}
     {% load static %}
+    <!-- Learn how to modify -->
+    <!-- Update the text inside the div with "modal-body" class below in order to update the help info -->
     <div class="modal fade" id="cservModal" tabindex="-1" aria-labelledby="cservModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
