--- a/templates/WebApp/login.html
+++ b/templates/WebApp/login.html
@@ -7,11 +7,10 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 {% endblock %} {% block content %}
     <div id="wrapper">
-        <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
-            <!-- Main Content -->
+            <!-- Google Login -->
+            <!-- This content is shown when the Login button is clicked on the navigation menu bar -->
             <div id="content">
-                {% include "WebApp/topbar.html" %}
                 <div class="container col-md-12 text-center">
                     <h2 class="m-4">Geospatial App Authentication</h2>
 
