--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -40,6 +40,8 @@
 {% block content %}
 
     <div class="container-fluid bg-gray-300">
+        <!-- Fixed Size WMS map -->
+        <!-- This template can be used when there is a need to visualize layers in a fixed size panel. To make any updates, visit map_fixedsize.js -->
         <div class="row">
             <div class="col-xl-12 col-lg-12">
                 <div class="card mb-4 mt-4 shadow">
@@ -53,12 +55,15 @@
                         <link rel="stylesheet" href="{% static '/css/fixed_map.css' %}">
                         <div id="map">
                         </div>
+                        <!-- Map Control -->
+                        <!-- This is an overlay panel that has three tabs - Layers, Basemaps and Legends. -->
                         <div class="accordion" id="fixed_tab_container">
                             <div id="loading_fixed">
                                 <div class="spinner-border text-secondary" role="status">
                                     <span class="visually-hidden">Loading...</span>
                                 </div>
                             </div>
+
                             <div class="accordion-item">
                                 <h2 class="accordion-header d-flex" id="headingFixed">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -102,6 +107,9 @@
                                                         </button>
                                                     </li>
                                                 </ul>
+                                                <!-- Tab pane: Layers -->
+                                                <!-- This consists of CHIRPS and ESI Layers. More text about the layer can be added in the popover below
+                                                     There are opacity controls for the layer and legends are displayed in the 'Legends' tab based on the checkbox selection.-->
                                                 <div class="border-grey bg-white tab-content">
                                                     <div class="tab-pane active p-3 ml-3" id="layers"
                                                          role="tabpanel"
@@ -154,6 +162,8 @@
 
 
                                                     </div>
+                                                    <!-- Tab pane: Basemaps -->
+                                                    <!-- This tab is used when there is a need to change basemaps. The basemaps used are present in basemaps.js -->
                                                     <div class="tab-pane" id="basemaps" role="tabpanel"
                                                          aria-labelledby="basemaps-tab">
                                                         <div class="card-body text-center">
@@ -199,14 +209,11 @@
 
 
                                                     </div>
+                                                    <!-- Tab pane: Legends -->
+                                                    <!-- This tab is used to display legend for the selected layer(s) -->
                                                     <div class="tab-pane" id="legends" role="tabpanel"
                                                          aria-labelledby="legends-tab"><p class="mt-1 ml-2">Legend for
                                                         the layer(s) selected</p></div>
-                                                    {#                                                    <div class="tab-pane p-3 ml-3" id="location"#}
-                                                    {#                                                         role="tabpanel"#}
-                                                    {#                                                         aria-labelledby="location_tab"><p>Enter location#}
-                                                    {#                                                        name and hit Enter to recenter the map</p></div>#}
-
                                                 </div>
                                             </div>
                                         </div>
@@ -221,6 +228,8 @@
                     </div>
                 </div>
             </div>
+            <!-- Description -->
+            <!-- To update the description, edit the <div> with the class 'card-body' below -->
             <div class="row">
                 <div class="col-lg-12 mb-4">
                     <div class="card shadow">
@@ -255,7 +264,7 @@
         </div>
         <br>
     </div>
-                            <link rel="stylesheet" href="{% static 'css/common.css' %}">
+    <link rel="stylesheet" href="{% static 'css/common.css' %}">
 
     {% include 'WebApp/map_fixedsize_about.html' %}
 
