--- a/templates/WebApp/about_about.html
+++ b/templates/WebApp/about_about.html
@@ -8,12 +8,36 @@
                     <h1 class="modal-title fs-5" id="aboutModalLabel">About this page</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <strong>templates/WebApp/about.html</strong> contains the HTML code to modify
-                    the text and graphics in this page.
-                    <br>
-                    The code for this application is available <a
-                        href="https://github.com/SERVIR/AppTemplate2022">here</a>
+                                <div class="modal-body">
+                    <div class="container">
+                        <h2>About Page</h2>
+                        <p>This about page is designed to provide a quick overview of the concepts behind the application,
+                            the team members, disclaimer and logos.</p>
+                        <ul>
+                            <li>The layout and content of this page is defined in the template
+                                located at
+                                <mark>templates\WebApp\about.html</mark>
+                                .
+                            </li>
+                            <li>For layout and styling we rely on standard bootstrap containers, however,
+                                you can add your own CSS classes in the
+                                <mark>WebApp\static\css\base.css</mark>
+                                file.
+                            </li>
+                            </li>
+                            <li>The code for this Django view is in the <strong>about</strong> function, located in
+                                <mark>WebApp\views.py</mark>
+                            </li>
+                            <li>The URL for this page is defined through the <strong>urlpatterns</strong>
+                                array, in
+                                <mark>SERVIR_AppTemplate\urls.py</mark>
+                            </li>
+                            <li>The text for this popup window is located at
+                                <mark>templates\WebApp\about_about.html</mark>
+                            </li>
+                        </ul>
+                        <p></p>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
