--- a/templates/WebApp/map_from_GEE_about.html
+++ b/templates/WebApp/map_from_GEE_about.html
@@ -8,20 +8,39 @@
                     <h1 class="modal-title fs-5" id="geeModalLabel">About this page</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <div class="alert">
+                                <div class="modal-body">
+                    <div class="container">
+                        <h2>Display GEE layers on fixed size map</h2>
+                        <p>This page is designed to provide visualization of layers from Google Earth Engine. In this template we are using Image Collection and User Asset layers.</p>
                         <ul>
-                            <li><strong>templates/WebApp/map_from_GEE.html</strong> contains the HTML code
-                                to modify
-                                the text and graphics in this page.
+                            <li>The layout and content of this page is defined in the template
+                                located at
+                                <mark>templates\WebApp\map_from_GEE.html</mark>
+                                .
                             </li>
-                            <li><strong>staticfiles/js/map_from_GEE.js</strong> controls the behavior of the
-                                map.
+                            <li>For layout and styling we rely on standard bootstrap containers, however,
+                                you can add your own CSS classes in the
+                                <mark>WebApp\static\css\base.css</mark> and <mark>WebApp\static\css\gee_map.css</mark>
+                                files.
                             </li>
-                            <br>
-                            The code for this application is available <a
-                                href="https://github.com/SERVIR/AppTemplate2022">here</a>
+                            </li>
+                            <li>The custom interaction used for the search box is implemented through javaScript,
+                                in
+                                <mark>WebApp\static\js\map_from_GEE.js</mark>
+                                .
+                            </li>
+                            <li>The code for this Django view is in the <strong>map_from_gee</strong> function, located in
+                                <mark>WebApp\views.py</mark>
+                            </li>
+                            <li>The URL for this page is defined through the <strong>urlpatterns</strong>
+                                array, in
+                                <mark>SERVIR_AppTemplate\urls.py</mark>
+                            </li>
+                            <li>The text for this popup window is located at
+                                <mark>templates\WebApp\map_from_GEE_about.html</mark>
+                            </li>
                         </ul>
+                        <p></p>
                     </div>
                 </div>
                 <div class="modal-footer">
