--- a/templates/WebApp/map_fullscreen_about.html
+++ b/templates/WebApp/map_fullscreen_about.html
@@ -8,14 +8,39 @@
                     <h1 class="modal-title fs-5" id="fullModalLabel">About this page</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <div class="text-dark alert m-auto justify-content-between about_page">
-                        <strong>templates/WebApp/map_fullscreen.html</strong> contains the HTML code
-                        to modify
-                        the text and graphics in this page.
-                        <strong>staticfiles/js/map_fullscreen.js</strong> controls the behavior of
-                        the map.
-
+                 <div class="modal-body">
+                    <div class="container">
+                        <h2>Display WMS on full screen map</h2>
+                        <p>This page is designed to provide visualization of WMS layers from different servers like Thredds and MapServer. In this template we are using CHIRPS and ESI layers.</p>
+                        <ul>
+                            <li>The layout and content of this page is defined in the template
+                                located at
+                                <mark>templates\WebApp\map_fullscreen.html</mark>
+                                .
+                            </li>
+                            <li>For layout and styling we rely on standard bootstrap containers, however,
+                                you can add your own CSS classes in the
+                                <mark>WebApp\static\css\base.css</mark> and <mark>WebApp\static\css\full_map.css</mark>
+                                files.
+                            </li>
+                            </li>
+                            <li>The custom interaction used for the search box is implemented through javaScript,
+                                in
+                                <mark>WebApp\static\js\map_fullscreen.js</mark>
+                                .
+                            </li>
+                            <li>The code for this Django view is in the <strong>map_full_screen</strong> function, located in
+                                <mark>WebApp\views.py</mark>
+                            </li>
+                            <li>The URL for this page is defined through the <strong>urlpatterns</strong>
+                                array, in
+                                <mark>SERVIR_AppTemplate\urls.py</mark>
+                            </li>
+                            <li>The text for this popup window is located at
+                                <mark>templates\WebApp\map_fullscreen_about.html</mark>
+                            </li>
+                        </ul>
+                        <p></p>
                     </div>
                 </div>
                 <div class="modal-footer">
