updated instructions in the about pages

--- a/templates/WebApp/chart_from_netCDF_about.html
+++ b/templates/WebApp/chart_from_netCDF_about.html
@@ -39,6 +39,11 @@
                             <li>The text for this popup window is located at
                                 <mark>templates\WebApp\chart_from_netCDF_about.html</mark>
                             </li>
+                            <li>
+                                Download Resources: <a href="/static/js/sample.geojson" class="btn btn-light">Sample geojson
+                        file</a> <a href="/servir_apps/data/app_template/20191123.nc" class="btn btn-light">NetCDF file
+                        used in the example</a>
+                            </li>
                         </ul>
                         <p></p>
                     </div>
