--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -37,7 +37,7 @@
                             <input type="file" class="form-control" id="selectFiles"/>
                         </label>
 
-                        <div id="loading_cserv">
+                        <div id="loading_cserv" style="display: none;">
                             <div class="spinner-border text-secondary" role="status">
                                 <span class="visually-hidden">Loading...</span>
                             </div>
