--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -76,7 +76,7 @@
                         <link rel="stylesheet" href="{% static 'css/common.css' %}">
 
 
-                        <div id="loading_nc">
+                        <div id="loading_nc" style="display: none;">
                             <div class="spinner-border text-secondary" role="status">
                                 <span class="visually-hidden">Loading...</span>
                             </div>
