--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -83,8 +83,14 @@
                                                 class="fa-solid fa-circle-info info_btn"></i></a>
                                     </div>
 
-                                    <input id="opacity_chirps_full" type="range" value="contrast" max="0.5"
-                                           min="0" step="0.01"/><label class="ml-1"
+                                    <input id="opacity_chirps_full"
+                                           type="range"
+                                           value="contrast"
+                                           max="0.5"
+                                           min="0"
+                                           step="0.01"
+                                           style="display: none;"
+                                    /><label class="ml-1"
                                                                        id="chirps_full_opacity"></label>
                                     <div id="legend_full_chirps"></div>
                                     <div class="d-inline-flex"><input class="form-check-input" id="esi_full"
@@ -97,8 +103,14 @@
                                                 class="fa-solid fa-circle-info info_btn"></i></a>
                                     </div>
 
-                                    <input id="opacity_esi_full" type="range" value="contrast" max="0.5" min="0"
-                                           step="0.01"/><label class="ml-1"
+                                    <input id="opacity_esi_full"
+                                           type="range"
+                                           value="contrast"
+                                           max="0.5"
+                                           min="0"
+                                           step="0.01"
+                                           style="display: none;"
+                                    /><label class="ml-1"
                                                                id="esi_full_opacity"></label>
                                     <div id="legend_full_esi"></div>
                                 </div>
