--- a/templates/WebApp/feedback.html
+++ b/templates/WebApp/feedback.html
@@ -4,11 +4,25 @@
 {% block script %}
     <!-- Custom styles-->
     <style>
+        .content {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            flex-direction: column;
+            background-color: blue;
+            overflow: hidden;
+        }
+
         .second-row {
             flex-grow: 1;
             border: none;
             margin: 0;
             padding: 0;
+        }
+
+        #content {
+            display: flex;
+            flex-direction: column;
         }
     </style>
     <!-- Custom scripts-->
@@ -18,7 +32,7 @@
 {% block content %}
     <!-- Feedback page -->
     <!-- The link in the src of <iframe> tag is a Google Forms link. Please create a form link and replace the src below to update the feedback form -->
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdpBjfXz9ETRiQnFgy4Y6eXKKQjwA1H6-c-qva_2VN_1vDQ6g/viewform?usp=sf_link"
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdpBjfXz9ETRiQnFgy4Y6eXKKQjwA1H6-c-qva_2VN_1vDQ6g/viewform?embedded=true"
             class="second-row">Loading…
     </iframe>
 
