--- a/templates/WebApp/feedback.html
+++ b/templates/WebApp/feedback.html
@@ -4,6 +4,7 @@
 {% block script %}
     <!-- Custom styles-->
     <style>
+        {#    Override default content styles to format iframed form   #}
         .content {
             display: flex;
             width: 100%;
@@ -13,6 +14,11 @@
             overflow: hidden;
         }
 
+        #content {
+            display: flex;
+            flex-direction: column;
+        }
+
         .second-row {
             flex-grow: 1;
             border: none;
@@ -20,10 +26,6 @@
             padding: 0;
         }
 
-        #content {
-            display: flex;
-            flex-direction: column;
-        }
     </style>
     <!-- Custom scripts-->
 
