setup instructions read me

--- a/templates/WebApp/setup.html
+++ b/templates/WebApp/setup.html
@@ -69,7 +69,7 @@
 <li><b>Create your own github repo for your application</b> - You can push updates for version control as well as make it easier to get assistance when needed.</li>
 <li><b>Publish your application to a web server.</b></li>
 </ul>
-                          <p>  Detailed instructions for each step of the process will be found in the GitHub repository for this template.</p>
+                            <p>  Detailed instructions for each step of the process will be found in the <a href="https://github.com/SERVIR/AppTemplate2022">GitHub repository</a> for this template.</p>
 
                         </div>
                     </div>
