hero image remove card class

--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -11,7 +11,7 @@
 <!-- Begin Page Content -->
 {% block content %}
     <div class="align-items-center justify-content-between bg-gray-300">
-        <div class="card">
+        <div style="position: relative;">
             <!-- Hero image in the home page -->
             <!-- If there an image that represents the tool/organization, please update the src in the <img> below -->
             <div>
