fix localStorage time compare

--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -34,6 +34,7 @@
     <script src="{% static 'js/utils.js' %}"></script>
 
     <script src="{% static 'js/basemaps.js' %}"></script>
+    <script src="{% static '/js/map_utils.js' %}"></script>
 
 {% endblock %}
 
