--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -37,6 +37,7 @@
     <link href="{% static '/css/full_map.css' %}" rel="stylesheet"/>
 
     <script src="{% static '/js/geosearch.umd.js' %}"></script>
+    <script src="{% static '/js/map_utils.js' %}"></script>
 
 {% endblock %}
 
