--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -28,10 +28,6 @@
 
     <script src="{% static '/js/basemaps.js' %}"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-
-{% endblock %}
-
-{% block content %}
     <link
             rel="stylesheet"
             href="{% static '/css/geosearch.css' %}"
@@ -40,6 +36,12 @@
 
 
     <script src="{% static '/js/geosearch.umd.js' %}"></script>
+    <script src="{% static '/js/map_utils.js' %}"></script>
+
+{% endblock %}
+
+{% block content %}
+
 
 
     <div class="container-fluid bg-gray-300">
