--- a/templates/WebApp/select_aoi.html
+++ b/templates/WebApp/select_aoi.html
@@ -19,6 +19,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
 
     <script src="{% static 'js/basemaps.js' %}"></script>
+    <style>
+    .leaflet-top.leaflet-right{
+        top:50px;
+
+    }
+    </style>
 
 {% endblock %}
 
